[package]
name = "zip_codes"
version = "0.1.0"
authors = ["Skyler Lipthay <skyler.lipthay@gmail.com>"]
description = "A lookup table for all primary U.S. ZIP codes."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SkylerLipthay/zip_codes"
documentation = "http://skylerlipthay.github.io/zip_codes/doc/zip_codes/"
build = "build.rs"

[dependencies]
phf = "0.7"

[build-dependencies]
csv = "0.14"
phf_codegen = "0.7"
rustc-serialize = "0.3"
